--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,6 @@
 platform = atmelavr
 board = micro
 framework = arduino
-
 lib_deps = 
-    arduino-libraries/Keyboard@^1.0.4
+	arduino-libraries/Keyboard@^1.0.4
+	paulstoffregen/Encoder@^1.4.2
