--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	arduino-libraries/Keyboard@^1.0.4
 	paulstoffregen/Encoder@^1.4.2
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
