--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	arduino-libraries/Keyboard@^1.0.4
 	paulstoffregen/Encoder@^1.4.2
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	feilipu/FreeRTOS@^10.4.6-8
