--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = micro
 framework = arduino
+test_framework = unity
 lib_deps = 
 	arduino-libraries/Keyboard@^1.0.4
 	paulstoffregen/Encoder@^1.4.2
